--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -5,17 +5,12 @@
   font-family: "Poppins", sans-serif;
 }
 
-:root {
-  --secondary-bg-color: #121212;
-  --main-bg-color: #1e1e1f;
-  --text-color: #fafafa;
-}
 
-.hide-scrollbar {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-}
-
+/* Hide scrollbar across devices */
 .hide-scrollbar::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera */
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
 }
