--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -15,3 +15,121 @@
   scrollbar-width: none;
 }
 
+/* Extra Small (XS) - Phones (up to 575.98px) */
+@media (max-width: 575.98px) {
+  nav {
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 55;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5;
+    padding: 0 2rem;
+    background: rgba(255, 255, 255, 0.01);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); /* Safari support */
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 30px 30px 0 0;
+  }
+
+  #custom-navlink {
+    font-size: 4vw;
+  }
+}
+
+/* Small (SM) - Large phones and small tablets (576px - 767.98px) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  nav {
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 55;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5rem;
+    background: rgba(255, 255, 255, 0.01);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); /* Safari support */
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 30px 30px 0 0;
+  }
+
+  #custom-navlink {
+    font-size: 1rem;
+  }
+}
+
+/* Medium (MD) - Tablets (768px - 991.98px) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  nav {
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 55;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5rem;
+    background: rgba(255, 255, 255, 0.01);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); /* Safari support */
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 30px 30px 0 0;
+  }
+}
+
+/* Large (LG) - Small laptops and desktops (992px - 1199.98px) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .custom-hero {
+    position: relative;
+  }
+
+  nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 60%;
+    height: 4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+  }
+}
+
+/* Extra Large (XL) - Large desktops (1200px - 1399.98px) */
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .custom-hero {
+    position: relative;
+  }
+
+  nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 60%;
+    height: 4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.5rem;
+  }
+
+  #custom-navlink {
+    transition: all ease 0.2s;
+  }
+
+  #custom-navlink:hover {
+    opacity: 0.7;
+  }
+}
