--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -40,6 +40,11 @@
   #custom-navlink {
     font-size: 4vw;
   }
+
+  .custom-resume-btn{
+    width: 100%;
+    text-align: center;
+  }
 }
 
 /* Small (SM) - Large phones and small tablets (576px - 767.98px) */
@@ -65,6 +70,11 @@
   #custom-navlink {
     font-size: 1rem;
   }
+
+  .custom-resume-btn{
+    width: 100%;
+    text-align: center;
+  }
 }
 
 /* Medium (MD) - Tablets (768px - 991.98px) */
@@ -85,6 +95,11 @@
     -webkit-backdrop-filter: blur(10px); /* Safari support */
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 30px 30px 0 0;
+  }
+
+  .custom-resume-btn{
+    width: 100%;
+    text-align: center;
   }
 }
 
