--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -15,6 +15,22 @@
   scrollbar-width: none;
 }
 
+/* Custom Scrollbar for body */
+body::-webkit-scrollbar {
+  width: 10px; /* slightly thick */
+  background: transparent;
+}
+
+body::-webkit-scrollbar-track {
+  background: #0d0d0d;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #1e1e1f;
+  border: 0.1rem solid #ffffff3f;
+  border-radius: 10px;
+}
+
 /* Extra Small (XS) - Phones (up to 575.98px) */
 @media (max-width: 575.98px) {
   nav {
@@ -41,9 +57,26 @@
     font-size: 4vw;
   }
 
-  .custom-resume-btn{
+  .custom-resume-btn {
     width: 100%;
     text-align: center;
+  }
+
+  .custom-dialog {
+    min-height: 90vh;
+    width: 90vw;
+  }
+
+  .proModel-imgBox {
+    height: auto;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .closeBtn {
+    padding: 5px;
+    top: 5%;
   }
 }
 
@@ -71,9 +104,21 @@
     font-size: 1rem;
   }
 
-  .custom-resume-btn{
+  .custom-resume-btn {
     width: 100%;
     text-align: center;
+  }
+
+  .custom-dialog {
+    min-height: 90vh;
+    width: 90vw;
+  }
+
+  .proModel-imgBox {
+    height: 60vh;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
   }
 }
 
@@ -97,9 +142,21 @@
     border-radius: 30px 30px 0 0;
   }
 
-  .custom-resume-btn{
+  .custom-resume-btn {
     width: 100%;
     text-align: center;
+  }
+
+  .custom-dialog {
+    min-height: 90vh;
+    width: 90vw;
+  }
+
+  .proModel-imgBox {
+    height: 60vh;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
   }
 }
 
@@ -119,6 +176,18 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
+  }
+
+  .custom-dialog {
+    min-height: 85vh;
+    width: 80vw;
+  }
+
+  .proModel-imgBox {
+    height: 60vh;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
   }
 }
 
@@ -146,5 +215,31 @@
 
   #custom-navlink:hover {
     opacity: 0.7;
+  }
+
+  .custom-dialog {
+    min-height: 85vh;
+    width: 70vw;
+  }
+
+  .proModel-imgBox {
+    height: 60vh;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  /* custom-scroll */
+  .custom-scroll::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .custom-scroll::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
+  }
+
+  .custom-scroll::-webkit-scrollbar-track {
+    background: transparent;
   }
 }
