--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -36,7 +36,7 @@ body::-webkit-scrollbar-thumb {
   nav {
     width: 100%;
     height: 10vh;
-    position: fixed;
+    position:fixed;
     bottom: 0;
     right: 0;
     z-index: 55;
@@ -54,10 +54,10 @@ body::-webkit-scrollbar-thumb {
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1),
       inset 0 1px 0 rgba(255, 255, 255, 0.5),
       inset 0 -1px 0 rgba(255, 255, 255, 0.1),
-      inset 0 0 0px 0px rgba(255, 255, 255, 0);
+      inset 0 0 0px 0px rgba(255, 255, 255, 0); 
   }
 
-  #custom-navlink {
+  .custom-navlink {
     font-size: 4vw;
   }
 
@@ -120,7 +120,7 @@ body::-webkit-scrollbar-thumb {
       inset 0 0 0px 0px rgba(255, 255, 255, 0);
   }
 
-  #custom-navlink {
+  .custom-navlink {
     font-size: 1rem;
   }
 
@@ -176,6 +176,8 @@ body::-webkit-scrollbar-thumb {
       inset 0 1px 0 rgba(255, 255, 255, 0.5),
       inset 0 -1px 0 rgba(255, 255, 255, 0.1),
       inset 0 0 0px 0px rgba(255, 255, 255, 0);
+
+      font-size: 1.8rem;
   }
 
   .custom-resume-btn {
@@ -247,11 +249,11 @@ body::-webkit-scrollbar-thumb {
     padding: 0 1.5rem;
   }
 
-  #custom-navlink {
+  .custom-navlink {
     transition: all ease 0.2s;
   }
 
-  #custom-navlink:hover {
+  .custom-navlink:hover {
     opacity: 0.7;
   }
 
